WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236590
Memory for messages wrapped for testing is freed before use
https://bugs.webkit.org/show_bug.cgi?id=236590
Summary
Memory for messages wrapped for testing is freed before use
Kimmo Kinnunen
Reported
2022-02-14 05:12:17 PST
Memory for messages wrapped for testing is freed before use Regression from
246260@main
bug 231674
Attachments
Patch
(3.41 KB, patch)
2022-02-14 05:28 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2022-02-14 05:13:04 PST
<
rdar://88736545
>
Kimmo Kinnunen
Comment 2
2022-02-14 05:28:20 PST
Created
attachment 451895
[details]
Patch
Kimmo Kinnunen
Comment 3
2022-02-15 06:03:08 PST
***
Bug 236589
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2022-02-15 06:08:12 PST
Committed
r289803
(
247268@main
): <
https://commits.webkit.org/247268@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 451895
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug